fixed ul alignment wrt left margin

--- a/server/server/web/style.css
+++ b/server/server/web/style.css
@@ -51,6 +51,9 @@ p {
 ol {
   padding-left: 40px; /* Adjust the padding as needed */
 }
+ul {
+  padding-left: 40px; /* Adjust the padding as needed */
+}
 
 /* Style buttons */
 button {
